--- a/src/main/resources/templates/statek.html
+++ b/src/main/resources/templates/statek.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Statek</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 <body>
+
+<div th:replace="header::header"/>
+
+Ahoj
 
 </body>
 </html>
