--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Title</title>
+    <title>StatekSound</title>
+
 </head>
 <body>
-<div th:fragment="header">
 
+<div id="header" th:fragment="header">
+    <div id="logo"></div>
     <div id="navigator">
         <ul>
-            <li>Akce</li>
-            <li>Technica</li>
+            <li><a href="#">O Nás</a></li>
+            <li><a href="#">Akce</a></li>
+            <li><a href="#">Profily</a></li>
+            <li><a href="#">Galerie</a></li>
+            <li><a href="#">Technika</a></li>
         </ul>
     </div>
-
-
 </div>
 
 
