--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,8 +1,21 @@
+html {
+  font-family: 'fertigo_proregular';
+  background-color: white;
+  height: 100%; }
+@font-face {
+  html {
+    font-family: 'fertigo_proregular';
+    src: url("Fertigo_PRO-webfont.eot");
+    src: url("Fertigo_PRO-webfont.eot?#iefix") format("embedded-opentype"), url("Fertigo_PRO-webfont.woff2") format("woff2"), url("Fertigo_PRO-webfont.woff") format("woff"), url("Fertigo_PRO-webfont.ttf") format("truetype"), url("Fertigo_PRO-webfont.svg#fertigo_proregular") format("svg");
+    font-weight: normal;
+    font-style: normal; } }
+  html body {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    height: 100%; }
+  html .content {
+    height: 100%;
+    background-color: antiquewhite; }
 
-#navigator {
-    background-color: #9da59d;
-}
-
-body{
-    background-color:#dee0db;
-}
+/*# sourceMappingURL=main.css.map */
