--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,11 +11,11 @@
     <div id="logo"></div>
     <div id="navigator">
         <ul>
-            <li><a href="#">O Nás</a></li>
-            <li><a href="#">Akce</a></li>
-            <li><a href="#">Profily</a></li>
-            <li><a href="#">Galerie</a></li>
-            <li><a href="#">Technika</a></li>
+            <li><a href="/">Akce</a></li>
+            <li><a href="/gallery">Galerie</a></li>
+            <li><a href="/equipment">Technika</a></li>
+            <li><a href="profile">DJ's</a></li>
+            <li><a href="/about">O Nás</a></li>
         </ul>
     </div>
 </div>
