--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Statek</title>
+    <title>Fotky</title>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
     <link rel="stylesheet" type="text/css" href="font/stylesheet.css" charset="utf-8"/>
 </head>
 <body>
-
 <div th:replace="header::header"></div>
 
-
 <div class="content">
-index
+gslerie
 </div>
-
-
 </body>
 </html>
