--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Statek</title>
+    <title>DJ's</title>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
     <link rel="stylesheet" type="text/css" href="font/stylesheet.css" charset="utf-8"/>
@@ -11,11 +11,9 @@
 
 <div th:replace="header::header"></div>
 
-
 <div class="content">
-index
+dj
 </div>
-
 
 </body>
 </html>
