--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -11,7 +11,7 @@
 
 <div th:replace="header::header"></div>
 
-<div class="content">
+<!--<div class="content">-->
 <h1>Kdo jsme a co děláme!</h1>
 <p>Jsme Statek, free music sound system pocházející z Valašského města Rožnov pod Radhoštěm.</p>
 <p>Zhruba před deseti lety se začala formovat malá skupinka lidí toužících po možnosti přispět na vzkvétající scéně
@@ -24,6 +24,6 @@
     hlavním cílem a touhou, je přinášet lidem nezapomenutelné audio visuální zážitky pod hlavičkou free kultury. Bežně
     hráváme v klubech či kulturácích, ale okamžitě co se na nás usměje sluníčko naložíme vše do dodávek a vyjíždíme na
     všemožné louky, postavit sound systém s pozvánkou na free párty.</p>
-</div>
+<!--</div>-->
 </body>
 </html>
