--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div id="header" th:fragment="header">
+<header>
     <div id="logo"></div>
     <div id="navigator">
         <ul>
@@ -18,7 +18,7 @@
             <li><a href="/about">O Nás</a></li>
         </ul>
     </div>
-</div>
+</header>
 
 
 </body>
