--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,39 +1,29 @@
-#header {
-  background-color: white; }
-  #header #logo {
+header {
+  opacity: 0.7; }
+  header #logo {
     background: url("../img/logo.png") no-repeat center;
     height: 180px; }
-  #header #navigator {
-    background-color: white;
-    width: 100%;
-    float: left;
+  header #navigator {
+    clear: both;
     border-width: 2px 0 2px 0;
-    border-color: black;
     height: 60px;
-    border-style: solid;
     padding-left: 70px; }
-    #header #navigator ul {
+    header #navigator ul {
       width: 80%;
-      height: 90%;
+      height: 60px;
       display: table;
-      line-height: 30px;
-      height: 30px;
       list-style-type: none;
       text-align: center;
       font-weight: bold; }
-      #header #navigator ul li {
-        height: 100%;
-        width: auto;
+      header #navigator ul li {
         display: table-cell; }
-        #header #navigator ul li a {
-          height: 100%;
-          font-family: 'fertigo_proregular';
+        header #navigator ul li a {
+          padding: 10px;
           font-size: 30px;
           text-align: center;
-          display: block;
           text-decoration: none;
-          color: black; }
-        #header #navigator ul li a:hover {
-          background-color: gray; }
+          color: #808080; }
+        header #navigator ul li a:hover {
+          background-color: #C0C0C0; }
 
 /*# sourceMappingURL=header.css.map */
