--- a/src/main/resources/static/css/header.scss
+++ b/src/main/resources/static/css/header.scss
@@ -1,50 +1,39 @@
 
-#header {
-  background-color: white;
+header {
+  opacity: 0.7;
   #logo {
     background: url("../img/logo.png") no-repeat center;
     height: 180px;
   }
   #navigator {
-    background-color: white;
-    width: 100%;
-    float: left;
+
+    clear: both;
     border-width: 2px 0 2px 0;
-    border-color: black;
+    //border-color: black;
     height: 60px;
-    border-style: solid;
+    //border-style: solid;
     padding-left: 70px;
 
     ul {
       width: 80%;
-      height: 90%;
+      height: 60px;
       display: table;
-      //margin: 0px 4px 0px 4px;
-      //padding-top: 6px;
-      line-height: 30px;
-      height: 30px;
+
       list-style-type: none;
       text-align: center;
       font-weight: bold;
-      //:first-child {
-      //  padding-left: 80px;
-      //}
-      li {
-        height: 100%;
-        width: auto;
+       li {
 
         display: table-cell;
         a {
-          height: 100%;
-          font-family: 'fertigo_proregular';
+          padding: 10px;
           font-size: 30px;
           text-align: center;
-          display: block;
           text-decoration: none;
-          color: black;
+          color: #808080;
         }
         a:hover {
-          background-color: gray;
+          background-color: #C0C0C0;
         }
       }
     }
