--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,4 +1,9 @@
 html {
+  background: url(../img/space3.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   font-family: 'fertigo_proregular';
   background-color: white;
   height: 100%; }
@@ -13,9 +18,12 @@ html {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    height: 100%; }
+    height: 100%;
+    opacity: 0.5; }
   html .content {
     height: 100%;
     background-color: antiquewhite; }
+  html img {
+    opacity: 0.5; }
 
 /*# sourceMappingURL=main.css.map */
