--- a/src/main/resources/static/css/header.scss
+++ b/src/main/resources/static/css/header.scss
@@ -30,10 +30,14 @@ header {
           font-size: 30px;
           text-align: center;
           text-decoration: none;
-          color: #808080;
+          color: #3d3c3a;
+          border-radius: 4px;
         }
         a:hover {
-          background-color: #C0C0C0;
+          //background-color: #e5e4e2;
+          background-color: white;
+          color: #2c3539;
+
         }
       }
     }
