--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,5 @@
 html {
-  background: url(../img/space3.jpg) no-repeat center center fixed;
+  background: url(../img/repro.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -18,12 +18,8 @@ html {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    height: 100%;
-    opacity: 0.5; }
+    height: 100%; }
   html .content {
-    height: 100%;
-    background-color: antiquewhite; }
-  html img {
-    opacity: 0.5; }
+    height: 100%; }
 
 /*# sourceMappingURL=main.css.map */
