--- a/src/main/resources/static/css/main.scss
+++ b/src/main/resources/static/css/main.scss
@@ -1,5 +1,5 @@
 html {
-  background: url(../img/space3.jpg) no-repeat center center fixed;
+  background: url(../img/repro.jpg) no-repeat center center fixed;
 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -27,18 +27,11 @@ html {
     margin-right: auto;
     width: 80%;
     height: 100%;
-    opacity: 0.5;
-
   }
 
   .content {
     height: 100%;
-    background-color: antiquewhite;
-
   }
 
-  img {
-    opacity: 0.5;
-  }
 }
 
