--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -25,7 +25,8 @@ header {
           color: #3d3c3a;
           border-radius: 4px; }
         header #navigator ul li a:hover {
-          background-color: white;
+          background-color: #e5e4e2;
+          box-shadow: 2px 2px 10px #848482;
           color: #2c3539; }
 
 /*# sourceMappingURL=header.css.map */
