--- a/src/main/resources/static/css/header.scss
+++ b/src/main/resources/static/css/header.scss
@@ -32,10 +32,29 @@ header {
           text-decoration: none;
           color: #3d3c3a;
           border-radius: 4px;
+
+
+        //  border-width: 1px;
+        //  border-style: solid;
+          //-webkit-border-image:
+          //        -webkit-gradient(linear, 100% 0, 0 0, from(black), to(rgba(0, 0, 0, 0))) 1 100%;
+          //-webkit-border-image:
+          //        -webkit-linear-gradient(right, black, rgba(0, 0, 0, 0)) 1 100%;
+          //-moz-border-image:
+          //        -moz-linear-gradient(right, black, rgba(0, 0, 0, 0)) 1 100%;
+          //-o-border-image:
+          //        -o-linear-gradient(right, black, rgba(0, 0, 0, 0)) 1 100%;
+          //border-image:
+          //        linear-gradient(to right, black, rgba(0, 0, 0, 0)) 1 100%;
+
+
+
         }
         a:hover {
           //background-color: #e5e4e2;
-          background-color: white;
+          background-color: #e5e4e2;
+          box-shadow: 2px 2px 10px #848482;
+          //color: #2c3539;
           color: #2c3539;
 
         }
