--- a/src/main/resources/static/css/header.scss
+++ b/src/main/resources/static/css/header.scss
@@ -4,6 +4,7 @@ header {
   #logo {
     background: url("../img/logo.png") no-repeat center;
     height: 180px;
+
   }
   #navigator {
 
@@ -22,6 +23,7 @@ header {
       list-style-type: none;
       text-align: center;
       font-weight: bold;
+
        li {
 
         display: table-cell;
@@ -34,27 +36,13 @@ header {
           border-radius: 4px;
 
 
-        //  border-width: 1px;
-        //  border-style: solid;
-          //-webkit-border-image:
-          //        -webkit-gradient(linear, 100% 0, 0 0, from(black), to(rgba(0, 0, 0, 0))) 1 100%;
-          //-webkit-border-image:
-          //        -webkit-linear-gradient(right, black, rgba(0, 0, 0, 0)) 1 100%;
-          //-moz-border-image:
-          //        -moz-linear-gradient(right, black, rgba(0, 0, 0, 0)) 1 100%;
-          //-o-border-image:
-          //        -o-linear-gradient(right, black, rgba(0, 0, 0, 0)) 1 100%;
-          //border-image:
-          //        linear-gradient(to right, black, rgba(0, 0, 0, 0)) 1 100%;
-
-
 
         }
         a:hover {
           //background-color: #e5e4e2;
           background-color: #e5e4e2;
           box-shadow: 2px 2px 10px #848482;
-          //color: #2c3539;
+          //color: #566d7e;
           color: #2c3539;
 
         }
