--- a/src/main/resources/static/css/main.scss
+++ b/src/main/resources/static/css/main.scss
@@ -30,7 +30,13 @@ html {
   }
 
   .content {
-    height: 100%;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 2px 0px;
+    border-color: #3d3c3a;;
+    margin-bottom: 1%;
+    padding: 0.5%;
+    color: #3d3c3a;
   }
 
 }
