--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -5,6 +5,7 @@
     <title>O Nás</title>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
+    <link rel="stylesheet" type="text/css" href="css/footer.css"/>
     <link rel="stylesheet" type="text/css" href="font/stylesheet.css" charset="utf-8"/>
 </head>
 <body>
@@ -12,6 +13,7 @@
 <div th:replace="header::header"></div>
 
 <!--<div class="content">-->
+<div class="content">
 <h1>Kdo jsme a co děláme!</h1>
 <p>Jsme Statek, free music sound system pocházející z Valašského města Rožnov pod Radhoštěm.</p>
 <p>Zhruba před deseti lety se začala formovat malá skupinka lidí toužících po možnosti přispět na vzkvétající scéně
@@ -25,5 +27,7 @@
     hráváme v klubech či kulturácích, ale okamžitě co se na nás usměje sluníčko naložíme vše do dodávek a vyjíždíme na
     všemožné louky, postavit sound systém s pozvánkou na free párty.</p>
 <!--</div>-->
+</div>
+
 </body>
 </html>
